@@ -940,7 +940,7 @@ $T->set_var(array(
     'site_url'          => $_MG_CONF['site_url'],
     'mg_navigation'     => MG_navigation(),
     'lang_admin'        => $LANG_MG00['admin'],
-    'version'           => $_MG_CONF['version'],
+    'version'           => $_MG_CONF['pi_version'],
     'xhtml'             => XHTML,
 
 ));
