@@ -233,7 +233,7 @@ $T->set_var(array(
     'status_msg'        => $statusMsg,
     'mg_navigation'     => MG_navigation(),
     'lang_admin'        => $LANG_MG00['admin'],
-    'version'           => $_MG_CONF['version'],
+    'version'           => $_MG_CONF['pi_version'],
     'admin_body'             => plugin_showstats_mediagallery(0),
     'xhtml'             => XHTML,
 ));
